--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <selenium.version>4.1.0</selenium.version>
         <json.version>20210307</json.version>
         <maven-compiler-plugin.source>15</maven-compiler-plugin.source>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
     <build>
         <plugins>
@@ -28,6 +29,12 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
